--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -15,8 +15,8 @@ body {
 
 .hero {
 	background: #2c2d3d;
-	background: -moz-linear-gradient(top,  #2c2d3d 0%, #474D60 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top,  #2c2d3d 0%,#474D60 100%); /* Chrome10-25,Safari5.1-6 */
+	background: -moz-linear-gradient(top left,  #2c2d3d 0%, #474D60 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top left,  #2c2d3d 0%,#474D60 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to top left,  #2c2d3d 0%,#474D60 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2c2d3d', endColorstr='#474D60',GradientType=0 ); /* IE6-9 */
 }
@@ -49,6 +49,7 @@ body {
 	color: rgba(255, 255, 255, 0.5);
 	font-size: 1.5rem;
 	font-weight: 300;
+	line-height: 2rem;
 }
 
 .github-button {
