make tooltip border blue

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -141,7 +141,7 @@ body {
 }
 
 .carousel-indicators li {
-    width: 140px;
+    width: 160px;
     height: auto;
 	text-indent: 0;
     border-radius: 3px;
@@ -150,7 +150,7 @@ body {
 }
 
 .carousel-indicators li.active {
-    width: 140px;
+    width: 160px;
     height: auto;
 	border-bottom: 1px solid black;
 	border-radius: 0;
@@ -168,8 +168,8 @@ body {
 }
 
 .hljs [data-toggle="tooltip"] {
-	outline: 1px solid #FF442B;
-	outline-offset: 2px;
+	outline: 1px solid #388BFF;
+	outline-offset: 0px;
 }
 
 @media (min-width: 48em) {
@@ -194,7 +194,7 @@ body {
 	.featurette.alt .center-block {
 		margin-left: auto;
 	}
-	
+
 	.hljs {
 		font-size: 12px;
 	}
